# fwends

./: .gitignore  LICENSE  README.md  docker-compose.yaml  nginx.conf  skaffold.yaml
.github/workflows/: ci.yaml  continuous-integration.yaml  integration-tests.yaml  linting.yaml
backend/: package.json  server.js
backend/src/: router.js  server.js
documentation/: commands.md
frontend/: Dockerfile  babel.config.js  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  Header.jsx  Home.jsx  Packs.jsx  Pieces.jsx  index.js  index.jsx
fwends-backend/: .gitignore  Cargo.toml  Dockerfile  go.mod  go.sum  main.go
fwends-backend/api/: auth.go  authenticate.go  health.go  packs.go
fwends-backend/config/: config.go  config_auth.go  config_postgres.go  config_redis.go  config_s3.go
fwends-backend/connections/: oauth2.go  postgres.go  redis.go  s3.go
fwends-backend/handler/: error_handler.go  logging_handler.go  static_handler.go  (+1 more)
fwends-frontend/: .eslintrc.js  Dockerfile  README.md  babel.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  webpack.config.js
fwends-nginx/: Dockerfile  nginx.conf  nginx.conf.template
fwends-postgres/: Dockerfile
fwends-redis/: Dockerfile
fwends-test/: .pylintrc  Pipfile  README.md  conftest.py  pyproject.toml  resource-attributions.txt  test_health.py  test_packs.py  util.py
fwends-test/resources/: bird-duck.aac  mammal-cat.flac  mammal-dog.m4a
git-hooks/: README.md  pre-commit
kubernetes/: .gitignore  fwends-backend.yaml  fwends-frontend.yaml
(+62 files in other folders)
